--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Fintrack
+spring.datasource.url=${DB_URL}/fintrack_api?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
